--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
   <h1>SERVICES</h1>
 
   <div class="one-3">
-    <i id="services-logo" class="fas fa-laptop"></i>
+    <i id="services-logo" class="fas fa-chart-line"></i>
     <h3>Service 1</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
 
   <div class="one-3">
-    <i id="services-logo" class="fas fa-code"></i>
+    <i id="services-logo" class="fas fa-chart-pie"></i>
     <h3>Service 2</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
 
   <div class="one-3">
-    <i id="services-logo" class="fab fa-leanpub"></i>
+    <i id="services-logo" class="fas fa-chart-bar"></i>
     <h3>Service 3</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua.</p>
