--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 
 	  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js">
   </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
 <body>
 
-	<div class="hero">
+	<div class="hero" id="home">
 		<nav>
 			<a href="#" class="logo">Analysts Of London</a>
 			<div class="desktopNav">
-        <a href="#">Home</a>
-				<a href="#">Services</a>
-				<a href="#">Team</a>
-				<a href="#">What We Do</a>
+        <a href="#home">Home</a>
+				<a href="#services">Services</a>
+				<a href="#team">Team</a>
+				<a href="#wWeDo">What We Do</a>
 				<a href="mailto:test@gmail.com">Contact</a>
 			</div>
 
@@ -35,14 +37,14 @@
 			<a href="#" class="btn">ABOUT US</a>
 		</div>
 
-		<div class="scroll">
+		<a href="#services"><div class="scroll">
 			<div class="line"></div>
 			<p>SCROLL</p>
 		</div>
 		<div class="bgImage">
 		</div>
 	</div>
-
+</a>
   <div id="services">
 
   <h1>SERVICES</h1>
@@ -71,7 +73,7 @@
 
 </div>
 
-	<div class="flex-2">
+	<div class="flex-2" id="team">
 		<div class="flexItem">
 			<img src="images/team1.jpeg" alt="team" class="mobileHide">
 		</div>
@@ -91,7 +93,7 @@
 		</div>
 	</div>
 
-	<div class="wwd">
+	<div class="wwd" id="wWeDo">
 	<h2>WHAT WE DO</h2>
   <br>
   <p>Analysts of London uses data to provide insight into how an organisation, and its workers, are performing.
@@ -103,7 +105,10 @@
     Analysts of London has worked on several multi-million pound projects, helping large and small workforces raise quality and productivity - whilst also shaping decisions at a executive level.
 </p>
 		<div class="line2"></div>
+
+
 	</div>
+
 
 
 	<footer>
@@ -117,5 +122,34 @@
           <p>&copy 2018 Yangbo Rai - ALL RIGHTS RESERVED</p>
         </div>
 	</footer>
+
+  <script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
+
+
+</script>
 </body>
 </html>
